# quicksilver

backend/: .gitignore  Cargo.toml
backend/docs/: endpoints.md
backend/src/: db.rs  handlers.rs  main.rs  util.rs
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: Dropdown.svelte  PasteArea.svelte  TopBar.svelte
frontend/src/routes/: +page.svelte
